minor change to docs
git-svn-id: https://phemto.svn.sourceforge.net/svnroot/phemto/trunk@10 689550c6-99b5-42a6-b8d6-a86e191e286b

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -131,6 +131,6 @@ th {
 #leftnav div, #rightnav div { 
 	margin: 1em 1em 2em 2em; 
 }
-#content h2 { 
+#content h2,h3 { 
 	margin: 2em 0 1.5em 0; 
 }
